# aaru

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  buf.yaml  build.rs
.cargo/: config.toml
.github/workflows/: audit.yml  bench.yml  buf-ci.yml  format.yml  test.yml
benches/: codec_sweep.rs  codec_target.rs  map_match.rs  total_ingestion.rs
docs/: codec.md  geo.md  head.md  route.md  tile.md
examples/: codec.rs  route.rs  route_client.rs  tile.rs
libs/routers_codec/: Cargo.toml  README.md  build.rs
libs/routers_codec/benches/: codec_sweep.rs  codec_target.rs
libs/routers_codec/docs/: codec.md  osm.md
libs/routers_codec/proto/osm/: fileformat.proto  osmformat.proto
libs/routers_codec/src/: lib.rs  primitive.rs  test.rs
libs/routers_codec/src/blob/: iterator.rs
libs/routers_codec/src/block/: item.rs  iterator.rs
libs/routers_codec/src/element/: item.rs  iterator.rs  processed_iterator.rs  test.rs
libs/routers_codec/src/element/variants/: mod.rs  node.rs  way.rs
libs/routers_codec/src/osm/: error.rs  mod.rs  parallel.rs  test.rs
libs/routers_codec/src/osm/blob/: item.rs  iterator.rs  mod.rs
libs/routers_codec/src/osm/block/: item.rs  iterator.rs  mod.rs
libs/routers_codec/src/osm/element/: item.rs  iterator.rs  mod.rs  processed_iterator.rs  test.rs
libs/routers_codec/src/osm/element/variants/: mod.rs  node.rs  relation.rs  way.rs
libs/routers_codec/src/osm/parsers/: mod.rs  speed_limit.rs
libs/routers_codec/src/osm/parsers/access_tag/: access.rs  mod.rs
libs/routers_codec/src/osm/parsers/primitives/: access.rs  condition.rs  direction.rs  lanes.rs  mod.rs  opening_hours.rs  road_class.rs  speed.rs  transport.rs
libs/routers_codec/src/osm/parsers/speed_limit/: collection.rs  limit.rs  mod.rs  restriction.rs  test.rs
libs/routers_codec/src/primitive/: edge.rs  mod.rs  node.rs  transport.rs
libs/routers_fixtures/: Cargo.toml
libs/routers_fixtures/resources/: district-of-columbia.osm.pbf  sydney.osm.pbf  zurich.osm.pbf
libs/routers_fixtures/src/: lib.rs
libs/routers_geo/: Cargo.toml
libs/routers_geo/src/: cluster.rs  error.rs  lib.rs  project.rs
libs/routers_geo/src/coord/: point.rs
libs/routers_grpc/: Cargo.toml  buf.yaml  build.rs
libs/routers_grpc/examples/: client.rs  ex.rs  server.rs
libs/routers_grpc/proto/api/match/v1/: definition.proto  service.proto
libs/routers_grpc/proto/api/optimise/v1/: service.proto
libs/routers_grpc/proto/api/proximity/v1/: definition.proto  service.proto
libs/routers_grpc/proto/api/scan/v1/: definition.proto  service.proto
libs/routers_grpc/proto/model/v1/: costing.proto  geo.proto  route.proto
libs/routers_grpc/src/: definition.rs  lib.rs  sdk.rs  trace.rs
libs/routers_grpc/src/services/: matcher.rs  mod.rs  optimise.rs  proximity.rs
libs/routers_server/: Cargo.toml  buf.yaml  build.rs
libs/routers_server/examples/: route_client.rs
libs/routers_server/proto/api/optimise/v1/: definition.proto
libs/routers_server/proto/api/v1/: geo.proto
libs/routers_server/proto/api/v1/router/v1/: definition.proto  service.proto
libs/routers_server/proto/model/v1/: geo.proto
libs/routers_server/proto/router/v1/: definition.proto  service.proto
libs/routers_server/proto/routers/v1/: geo.proto
libs/routers_server/proto/routers/v1/router/: definition.proto  service.proto
libs/routers_server/src/: main.rs  service.rs  trace.rs
libs/routers_server/src/services/: matcher.rs  mod.rs  optimise.rs  proximity.rs
libs/routers_shard/: Cargo.toml
libs/routers_shard/src/: auto.rs  error.rs  hash.rs  lib.rs
libs/routers_tiles/: Cargo.toml  build.rs
libs/routers_tiles/examples/: server.rs  tile.rs
libs/routers_tiles/proto/example/: example.proto
libs/routers_tiles/proto/mvt/: mvt.proto
libs/routers_tiles/src/: error.rs  fragment.rs  lib.rs  macros.rs  vector_tile.rs
libs/routers_tiles/src/datasource/: date.rs  mod.rs  query.rs
libs/routers_tiles/src/datasource/connectors/: bigtable.rs  mod.rs
libs/routers_tiles/src/example/: tile.rs
libs/routers_tiles/src/primitives/: layer.rs  mod.rs  mvt.rs  repository.rs
libs/routers_tiles/src/query/: mod.rs  params.rs  range.rs  tile.rs
proto/: aaru.proto
proto/aaru/v1/: aaru.proto
proto/cvt/: tile.proto
proto/mvt/: mvt.proto
resources/: los-angeles.osm.pbf
src/: lib.rs  main.rs
src/codec/: consts.rs  decode.rs  error.rs  mod.rs  parallel.rs  readme.md  test.rs
src/codec/blob/: item.rs  iterator.rs  mod.rs
src/codec/block/: item.rs  iterator.rs  mod.rs
src/codec/element/: item.rs  iterator.rs  mod.rs  processed_iterator.rs  test.rs
src/codec/element/variants/: mod.rs  node.rs  relation.rs  way.rs
src/geo/: cluster.rs  error.rs  mod.rs  project.rs
src/geo/cluster/: haversine.rs  mod.rs  set.rs
src/geo/coord/: latlng.rs  mod.rs  point.rs  vec.rs
src/graph/: item.rs  mod.rs
src/graph/implementations/: osm.rs
src/graph/impls/: osm.rs
src/graph/traits/: mod.rs
src/graph/traits/match/: definition.rs  implementation.rs  mod.rs
src/graph/traits/proximity/: definition.rs  implementation.rs  (+2 more)
src/route/: error.rs  graph.rs  mapmatch.rs  mod.rs  reason.rs  scan.rs  test.rs  transition.rs
src/route/transition/: graph.rs  mod.rs  node.rs  segment.rs  test.rs  trip.rs
src/server/: hello.rs  mod.rs  route.rs  trace.rs
src/shard/: auto.rs  error.rs  hash.rs  mod.rs
src/sharder/: auto.rs  error.rs
src/tile/: error.rs  fragment.rs  layer.rs  mod.rs  mvt.rs  params.rs  project.rs  querier.rs  repositories.rs
src/tile/datasource/: bigquery.rs  brakepoint.rs  date.rs  mod.rs  query.rs
src/transition/: entity.rs  graph.rs  mod.rs
src/transition/candidate/: collapse.rs  entry.rs  graph.rs  mod.rs  route.rs
src/transition/costing/: default.rs  emission.rs  mod.rs  routing.rs  transition.rs  util.rs
src/transition/layer/: generator.rs  mod.rs
src/transition/primitives/: cache.rs  cumulative.rs  error.rs  mod.rs  weight_and_distance.rs
src/transition/solver/: methods.rs  selective_forward.rs
src/transition/trip/: entity.rs  mod.rs  test.rs
src/util/: err.rs  mod.rs  trace.rs
(+47 files in other folders)
