[workspace]
resolver = "2"
members = [
    "libs/routers_codec", "libs/routers_geo", "libs/routers_server",
    "libs/routers_shard", "libs/routers_tiles", "libs/routers_fixtures"
]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
fixtures = { version = "0.1.0" }

[patch.crates-io]
routers_fixtures = { path = "libs/routers_fixtures"}

[package]
name = "routers"
description = "Rust-Based Routing Tooling for System-Agnostic Maps."
readme = "README.md"
version = "0.2.0"
edition = "2024"
license = "MIT"
include = ["src/**/*", "readme.md"]

[lib]
name = "routers"
path = "src/lib.rs"
bench = false

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
fixtures = { workspace = true }
codec = { path = "libs/routers_codec", package = "routers_codec", version = "0.1.0" }

# Algorithm
rstar = { version = "0.12.2", features = ["serde"] }
petgraph = { version = "0.8.1", features = ["serde-1", "graphmap", "rayon"] }

# Logging Utility
log = { version = "0.4.22", features = [] }

tokio = { version = "1.41.1", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "fs",
], optional = true }

axum = { version = "0.7.7", features = ["query"], optional = true }
axum-macros = { version = "0.4.1", optional = true }
serde_qs = { version = "0.13.0", optional = true }

# Tracing [Optional-"tracing"]
tracing = { version = "0.1.40", optional = true }
tracing-subscriber = { version = "0.3.18", features = [
    "tracing-log",
    "fmt",
    "env-filter",
], optional = true }
opentelemetry = { version = "0.26.0", optional = true }
opentelemetry_sdk = { version = "0.26.0", features = [
    "rt-tokio",
], optional = true }
tracing-opentelemetry = { version = "0.27.0", optional = true }
opentelemetry-otlp = { version = "0.26.0", features = ["tls"], optional = true }

# Optimisations and Compression
rayon = "1.10.0"
flate2 = { version = "1.0.34", features = ["zlib-ng"], optional = true }
fast_hilbert = { version = "2.0.0", optional = true }
scc = { version = "2.2.4", optional = true }
pathfinding = "4.14.0"
approx = "0.5.1"
itertools = "0.14.0"

# GeoRust
geo = "0.30.0"
wkt = "0.13.0"
measure_time = "0.9.0"
rustc-hash = "2.1.1"
indexmap = "2.9.0"

[dev-dependencies]
criterion = { version = "2.10.1", features = [
    "async_tokio",
], package = "codspeed-criterion-compat" }

[[bench]]
name = "map_match"
harness = false

[[bench]]
name = "total_ingestion"
harness = false

# TODO: Redo.
[features]
default = ["codec", "route"]

tracing = [
    "dep:tracing",
    "tracing-subscriber",
    "opentelemetry",
    "opentelemetry_sdk",
    "tracing-opentelemetry",
    "opentelemetry-otlp",
]

http_server = ["axum", "axum-macros", "serde_qs", "tokio"]

tile = ["http_server", "fast_hilbert"]
route = ["scc", "codec"]
codec = ["flate2"]

all = ["tile", "route", "codec"]

[package.metadata.docs.rs]
features = ["tile", "route", "codec"]

[profile.release]
opt-level = 3
lto = "fat"

[profile.bench]
opt-level = 3
lto = true
