# === Workspace ===
[workspace]
resolver = "2"
members = [
    "libs/routers_codec", "libs/routers_geo", "libs/routers_grpc",
    "libs/routers_shard", "libs/routers_tiles", "libs/routers_fixtures"
]

[workspace.lints.rust]
unsafe_code = "forbid"

# === Workspace Deps ===
[workspace.dependencies]
# Optimisation Crates
rayon = "1.10.0"
scc = "2.3.4"
itertools = "0.14.0"
indexmap = "2.9.0"

# Logging
log = { version = "0.4.27" }
test-log = { version = "0.2.17", features = ["log"] }

# Server/Paralellism
dotenv = "0.15.0"
tower-http = { version = "0.6.4", features = ["cors"] }
tokio = { version = "1.45.0", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "fs",
] }

# GeoRust
geo = { version = "0.30.0" }
wkt = { version = "0.14.0" }
rstar = { version = "0.12.2", features = ["serde"] }

# Tracing
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = [
    "tracing-log",
    "fmt",
    "env-filter",
] }
tracing-opentelemetry = { version = "0.30.0" }
opentelemetry = { version = "0.29.1" }
opentelemetry_sdk = { version = "0.29.0", features = [
    "rt-tokio",
] }
opentelemetry-otlp = { version = "0.29.0", features = ["tls", "grpc-tonic", "trace"] }
opentelemetry-stdout = { version = "0.29.0", features = ["trace", "logs", "metrics"] }

# Benchmarking
criterion = { version = "2.10.1", features = [
    "async_tokio",
], package = "codspeed-criterion-compat" }

# Utilities
strum = { version = "0.27.1", features = ["phf", "derive"] }

# === Profiles ===
[profile.release]
opt-level = 3
lto = "fat"

[profile.bench]
codegen-units = 1
opt-level = 3
lto = "fat"

[profile.dev]
opt-level = 0
lto = "off"

[profile.dev.package."*"]
opt-level = 3

# === Root Package ===
[package]
name = "routers"
description = "Rust-Based Routing Tooling for System-Agnostic Maps."
readme = "README.md"
version = "0.2.0"
edition = "2024"
license = "MIT"
include = ["src/**/*", "readme.md"]

[lib]
name = "routers"
path = "src/lib.rs"
bench = false

# === Root Dependencies ===
[dependencies]
# Algorithm
rstar = { workspace = true }
codec = { path = "libs/routers_codec", package = "routers_codec", version = "0.1.0" }
petgraph = { version = "0.8.1", features = ["serde-1", "graphmap", "rayon"] }

# Root-Specific Crates
approx = "0.5.1"
pathfinding = "4.14.0"
measure_time = "0.9.0"
rustc-hash = "2.1.1"

# Logging Utility
log = { workspace = true }

# GeoRust
geo = { workspace = true }

# Tracing [Optional-"tracing"]
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }

# Optimisations and Compression
rayon = { workspace = true }
scc = { workspace = true }
itertools = { workspace = true }
indexmap = { workspace = true }
thiserror = "2.0.12"

[dev-dependencies]
wkt = { workspace = true }
criterion = { workspace = true }

routers_fixtures = { path = "libs/routers_fixtures" }
similar-asserts = "1.7.0"

[[bench]]
name = "map_match"
harness = false

[[bench]]
name = "total_ingestion"
harness = false

[features]
tracing = [
    "dep:tracing",
    "tracing-subscriber",
    "opentelemetry",
    "opentelemetry_sdk",
    "tracing-opentelemetry",
    "opentelemetry-otlp",
]

[package.metadata.docs.rs]
features = []
