[package]
name = "routers_codec"
version = "0.1.1"
edition = "2024"
include = ["docs/**", "build.rs", "proto/**", "src/**", "benches/**"]
description = "Codec primitives for routers"
license = "MIT"
repository = "https://github.com/bennjii/routers"

[lib]
name = "routers_codec"
path = "./src/lib.rs"
bench = false

[dependencies]
num-traits = "0.2.19"

# TODO: Remove dependency.
either = "1.13.0"

prost = { version = "0.13.3" }
bytes = { version = "1.8.0", features = ["default"] } # Required for io::Cursor

# Compression
flate2 = { version = "1.1.1", features = ["zlib-rs"] }
mimalloc = { version = "0.1.43", optional = true }

# GeoRust
geo = { workspace = true }
rstar = { workspace = true }

rayon = { workspace = true }
log = { workspace = true }

# Tracing
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

[dev-dependencies]
routers_fixtures = { path = "../routers_fixtures" }

test-log = { workspace = true }
criterion = { workspace = true }

# Used to compare performance to ensure no large regression
osmpbf = { version = "0.3.5", features = ["zlib-ng"], default-features = false }

[build-dependencies]
prost-build = { version = "0.13.5" }

[[bench]]
name = "codec_sweep"
harness = false

[[bench]]
name = "codec_target"
harness = false

[features]
default = ["mimalloc"]

# Alternate Allocator (Applies to #[global_allocator])
mimalloc = ["dep:mimalloc"]

# Tracing (For Debugging & Logging)
tracing = ["dep:tracing", "dep:tracing-subscriber"]