[package]
name = "routers_grpc"
version = "0.1.0"
edition = "2024"

[lib]
name = "routers_grpc"
path = "src/lib.rs"
bench = false

[dependencies]
fixtures = { workspace = true }

routers = { path = "../.." }

geo = "0.30.0"
wkt = "0.13.0"
log = { version = "0.4.22", features = [] }

tokio = { version = "1.41.1", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "fs",
]}

dotenv = "0.15.0"

prost = { version = "0.13.3" }
prost-types = "0.13.4"

# gRPC Server Dependencies
tonic = { version = "0.13.0", features = [] }
tonic-reflection = { version = "0.13.0" }
tonic-web = { version = "0.13.0" }

# HTTP Server Dependencies
tower-http = { version = "0.6.1", features = ["cors"] }

# Tracing
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = [
    "tracing-log",
    "fmt",
    "env-filter",
] }
tracing-opentelemetry = { version = "0.27.0" }

# Open-Telemetry Modules
opentelemetry = { version = "0.26.0", optional = true }
opentelemetry_sdk = { version = "0.26.0", features = [
    "rt-tokio",
], optional = true }
opentelemetry-otlp = { version = "0.26.0", features = ["tls"], optional = true }

[build-dependencies]
tonic-build = { version = "0.13.0", features = ["prost"] }
prost-build = { version = "0.13.3" }
walkdir = "2.5.0"

[features]
default = []
tracing = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp"
]

[[example]]
name = "client"
path = "examples/client.rs"

[[example]]
name = "server"
path = "examples/server.rs"
required-features = ["tracing"]
