[package]
name = "routers_grpc"
version = "0.1.0"
edition = "2024"

[lib]
name = "routers_grpc"
path = "src/lib.rs"
bench = false

[dependencies]
# Workspace Crates
fixtures = { workspace = true }
routers = { path = "../.." }

# Environment Variable Resolution
dotenv = "0.15.0"

# Protobuf Handling
prost = { version = "0.13.3" }
prost-types = "0.13.4"

# gRPC Server Dependencies
tonic = { version = "0.13.1", features = [] }
tonic-reflection = { version = "0.13.1" }
tonic-web = { version = "0.13.1" }

# HTTP Server Dependencies
tower-http = { version = "0.6.1", features = ["cors"] }

# GeoRust
geo = { workspace = true }
wkt = { workspace = true }

log = { workspace = true }
tokio = { workspace = true }

# Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }

# OpenTelemetry
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }

[build-dependencies]
tonic-build = { version = "0.13.0", features = ["prost"] }
prost-build = { version = "0.13.3" }
walkdir = "2.5.0"

[features]
default = []
telemetry = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp"
]

[[example]]
name = "client"
path = "examples/client.rs"

[[example]]
name = "server"
path = "examples/server.rs"
required-features = ["tracing"]

[lints]
workspace = true