[package]
name = "routers_tiles"
version = "0.1.0"
edition = "2024"

[dependencies]
geo = "0.30.0"
routers_geo = { path = "../routers_geo" }

# Server dependencies
axum = { version = "0.7.7", features = ["query"] }
prost = { version = "0.13.3" }

fast_hilbert = { version = "2.0.0" }
strum = { version = "0.26.3", features = ["phf", "derive"] }

chrono = "0.4.38"
log = { version = "0.4.22", features = [] }
serde = { version = "1.0.214", features = ["derive"] }

tracing = { version = "0.1.40", optional = true }

[build-dependencies]
prost-build = { version = "0.13.3" }

[features]
tracing = ["dep:tracing"]